# DQN

./: .gitignore  README.md  analyze_dino.py  compare_plots.py  config.py  eval.py  evaluate_best_models.py  experiment.py  experiment2.py  play.py  plot_log.py  pyproject.toml  summarize_experiments.py  summary.py  thesis_revision_notes.md  train.py
dqn/: __init__.py  agent.py  dino_analysis.py  env.py  evaluation.py  experiment_utils.py  network.py  q_network.py  replay_buffer.py  shared.py  training.py  utils.py
dqn/agents/: __init__.py  dqn_agent.py  perdqn_agent.py
dqn/buffers/: __init__.py  prioritized_replay_buffer.py  replay_buffer.py
dqn/envs/: __init__.py  dino_env.py  env_factory.py
dqn/envs/dino/: __init__.py  env.py  main.py
dqn/utils/: __init__.py  logger.py  plot_utils.py  seed_utils.py  state_processor.py
experiments/ALE_Pong-v5/dqn/seed_42/logs/: config.json
runs/: config.json
runs/smoke/: config.json  metrics.json  run_summary.json
runs/smoke_fix/: config.json  metrics.json  run_summary.json
runs/smoke_fix_final/: config.json  metrics.json  run_summary.json
runs/smoke_per/: config.json  metrics.json  run_summary.json
tests/: test_agent_loss.py  test_play_behavior.py  test_protocol_configuration.py  test_replay_buffer_semantics.py
