[project]
name = "perdqn-strategy-decision"
version = "0.1.0"
description = "Undergraduate RL project for DQN and PER-DQN strategy decision experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[other]>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "torch>=2.0",
    "tqdm>=4.67.3",
]
